--- a/app/src/main/res/layout/activity_configuracao.xml
+++ b/app/src/main/res/layout/activity_configuracao.xml
@@ -124,17 +124,18 @@
 
     <TextView
         android:id="@+id/infoconfigalerta"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/contabacinfo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header"
-        app:layout_constraintVertical_bias="0.544" />
+        app:layout_constraintVertical_bias="0.525" />
 
     <TextView
         android:id="@+id/textalertaenotificacoes"
@@ -159,12 +160,10 @@
         android:fontFamily="@font/saira_bold"
         android:text="@string/divisoria"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.526"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/main"
-        app:layout_constraintVertical_bias="0.21" />
+        app:layout_constraintBottom_toBottomOf="@+id/infoconfig"
+        app:layout_constraintEnd_toEndOf="@+id/infoconfig"
+        app:layout_constraintStart_toStartOf="@+id/infoconfig"
+        app:layout_constraintTop_toTopOf="@+id/infoconfig" />
 
     <TextView
         android:id="@+id/textView11"
@@ -178,22 +177,92 @@
         app:layout_constraintHorizontal_bias="0.454"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/main"
-        app:layout_constraintVertical_bias="0.405" />
+        app:layout_constraintVertical_bias="0.408" />
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/texttema"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/saira_bold"
-        android:text="@string/divisoria3"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/main"
-        app:layout_constraintVertical_bias="0.588"
-        tools:ignore="DuplicateIds" />
+        android:text="@string/tema"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/infoconfig"
+        app:layout_constraintEnd_toEndOf="@+id/infoconfig"
+        app:layout_constraintHorizontal_bias="0.047"
+        app:layout_constraintStart_toStartOf="@+id/infoconfig"
+        app:layout_constraintTop_toTopOf="@+id/infoconfig"
+        app:layout_constraintVertical_bias="0.378" />
+
+    <TextView
+        android:id="@+id/textAlterardados"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira_bold"
+        android:text="@string/Alterar_dados"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/infoconfig"
+        app:layout_constraintEnd_toEndOf="@+id/infoconfig"
+        app:layout_constraintHorizontal_bias="0.06"
+        app:layout_constraintStart_toStartOf="@+id/infoconfig"
+        app:layout_constraintTop_toTopOf="@+id/infoconfig"
+        app:layout_constraintVertical_bias="0.824" />
+
+    <TextView
+        android:id="@+id/textsenhaLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira_bold"
+        android:text="@string/Alterar_senha"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/infoconfigseguranca"
+        app:layout_constraintEnd_toEndOf="@+id/infoconfigseguranca"
+        app:layout_constraintHorizontal_bias="0.052"
+        app:layout_constraintStart_toStartOf="@+id/infoconfigseguranca"
+        app:layout_constraintTop_toTopOf="@+id/infoconfigseguranca"
+        app:layout_constraintVertical_bias="0.395" />
+
+    <TextView
+        android:id="@+id/textsenhaapp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira_bold"
+        android:text="@string/senha_app"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/infoconfigseguranca"
+        app:layout_constraintEnd_toEndOf="@+id/infoconfigseguranca"
+        app:layout_constraintHorizontal_bias="0.098"
+        app:layout_constraintStart_toStartOf="@+id/infoconfigseguranca"
+        app:layout_constraintTop_toTopOf="@+id/infoconfigseguranca"
+        app:layout_constraintVertical_bias="0.839" />
+
+    <TextView
+        android:id="@+id/textnotficaçoes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/saira_bold"
+        android:text="@string/Alterar_email"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/infoconfigalerta"
+        app:layout_constraintEnd_toEndOf="@+id/infoconfigalerta"
+        app:layout_constraintHorizontal_bias="0.053"
+        app:layout_constraintStart_toStartOf="@+id/infoconfigalerta"
+        app:layout_constraintTop_toTopOf="@+id/infoconfigalerta"
+        app:layout_constraintVertical_bias="0.52" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/infoconfigalerta"
+        app:layout_constraintEnd_toEndOf="@+id/infoconfigalerta"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toStartOf="@+id/infoconfigalerta"
+        app:layout_constraintTop_toTopOf="@+id/infoconfigalerta" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
