--- a/app/src/main/res/layout/activity_perguntas.xml
+++ b/app/src/main/res/layout/activity_perguntas.xml
@@ -38,14 +38,14 @@
 
     <TextView
         android:id="@+id/txt_pergunta"
-        android:layout_width="407dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/saira_bold"
-        android:rotationX="0"
+        android:paddingHorizontal="10dp"
         android:text="Você já possui o Cadastro Único?"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="32sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -101,7 +101,7 @@
     <Button
         android:id="@+id/btn_prox_pergunta"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="70dp"
         android:backgroundTint="@color/verdeForte"
         android:onClick="handleProximaPergunta"
@@ -113,10 +113,10 @@
         app:cornerRadius="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/green_rectangle"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/green_rectangle"
-        app:layout_constraintVertical_bias="0.81" />
+        app:layout_constraintVertical_bias="0.808" />
 
     <Button
         android:id="@+id/btn_sim_caduni"
